# srrg2_laser_slam_2d

./: .gitignore  README.md
configs/: killian.conf  killian_ros.conf  kuka.conf  laser_config.conf  laser_messages.boss  simul.conf  simul_laser_config_diago.conf
configs/deprecated/: configs_local_mapper_killian.conf  mit_killian_court.conf  mit_killian_court_odom.conf  multi_laser_slam_2d_kuka.conf  multi_laser_slam_2d_kuka_odom.conf
configurations/: stage_segway_double_config_LASER_0.json  stage_segway_double_config_MULTI.json
srrg2_laser_slam_2d/: CMakeLists.txt  README.md  package.xml
srrg2_laser_slam_2d/apps/: CMakeLists.txt  generic_bench_app.cpp  slam_app.cpp  synthetic_scene_generator.cpp  visual_test_aligner_2d.cpp  visual_test_correspondence_finder_projective_2d.cpp  visual_test_measurement_adaptor_projective_2d.cpp  visual_test_merger_projective_2d.cpp  visual_test_scene_clipper_projective_2d.cpp  visual_test_tracker_2d.cpp
srrg2_laser_slam_2d/benchmarks/: CMakeLists.txt  benchmark_carmen.cpp  benchmark_simul.cpp
srrg2_laser_slam_2d/octave/solver/: NICP.m  NICP_post.m  README.txt  geometry_helpers_3d.m  nicp.m  nicp_post.m
srrg2_laser_slam_2d/src/: CMakeLists.txt
srrg2_laser_slam_2d/src/srrg2_laser_slam_2d/: CMakeLists.txt  instances.cpp  instances.h
srrg2_laser_slam_2d/src/srrg2_laser_slam_2d/mapping/: CMakeLists.txt  merger_point_normal_2f.h  merger_projective_2d.cpp  merger_projective_2d.h  scene_clipper_ball_2d.cpp  scene_clipper_ball_2d.h  scene_clipper_point_normal_2f.h  scene_clipper_projective_2d.cpp  scene_clipper_projective_2d.h
srrg2_laser_slam_2d/src/srrg2_laser_slam_2d/registration/: CMakeLists.txt  aligner_slice_processor_laser_2d.h  aligner_slice_processor_laser_2d_impl.cpp  correspondence_finder_kd_tree_2d.cpp  correspondence_finder_kd_tree_2d.h  correspondence_finder_nn_2d.cpp  correspondence_finder_nn_2d.h  correspondence_finder_normal_2f.h  correspondence_finder_projective_2d.cpp  correspondence_finder_projective_2d.h
srrg2_laser_slam_2d/src/srrg2_laser_slam_2d/sensor_processing/: CMakeLists.txt  raw_data_preprocessor_projective_2d.cpp  raw_data_preprocessor_projective_2d.h
srrg2_laser_slam_2d/src/srrg2_laser_slam_2d/tracking/: tracker_slice_processor_laser_2d.h
srrg2_laser_slam_2d/src/srrg_laser_slam_2d/: CMakeLists.txt  correspondence_finder_2d.cpp  correspondence_finder_2d.h  correspondence_finder_kd_tree_2d.cpp  correspondence_finder_kd_tree_2d.h  correspondence_finder_nn_2d.cpp  correspondence_finder_nn_2d.h  correspondence_finder_projective_2d.cpp  correspondence_finder_projective_2d.h  instances.cpp  instances.h  measurement_adaptor_projective_2d.cpp  measurement_adaptor_projective_2d.h  merger_2d.cpp  merger_2d.h  merger_projective_2d.cpp  merger_projective_2d.h  scene_clipper_2d.cpp  scene_clipper_2d.h  scene_clipper_ball_2d.cpp  scene_clipper_ball_2d.h  scene_clipper_projective_2d.cpp  scene_clipper_projective_2d.h
srrg2_laser_slam_2d/src/test/: CMakeLists.txt  test_correspondence_finder2d.cpp  test_merger_projective_2d.cpp
srrg2_laser_slam_2d/tests/: CMakeLists.txt  fixtures.hpp  test_measurement_adaptor.cpp  test_slam.cpp
