<?xml version="1.0"?>
<package format="2">
  <name>srrg2_laser_slam_2d</name>
  <version>0.1.0</version>
  <description>The srrg2_laser_slam_2d package</description>

  <maintainer email="grisetti@diag.uniroma1.it">Giorgio Grisetti</maintainer>
  <maintainer email="colosi@diag.uniroma1.it">Mirco Colosi</maintainer>
  <maintainer email="ialoise@diag.uniroma1.it">Irvin Aloise</maintainer>
  <license>BSD-4</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <!-- ia build,build_export and exec depend are now contained in 'depend' -->
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>srrg_cmake_modules</depend>
  <depend>srrg2_core</depend>
  <depend>srrg2_core_ros</depend>
  <depend>srrg2_solver</depend>
  <depend>srrg2_qgl_viewport</depend>
  <depend>srrg2_slam_interfaces</depend>
</package>
