#ds TODO what about these?
# add_executable(test_correspondence_finder2d
#   test_correspondence_finder2d.cpp)
# target_link_libraries(test_correspondence_finder2d
#   srrg2_laser_tracker_2d_library
#   ${catkin_LIBRARIES})


# add_executable(test_merger_projective_2d
#   test_merger_projective_2d.cpp)
# target_link_libraries(test_merger_projective_2d
#   srrg2_laser_tracker_2d_library
#   ${catkin_LIBRARIES})

